--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
 
     <nav class="bg-white shadow-md sticky top-0 z-50">
         <div class="container mx-auto px-4 lg:px-6 py-3 flex justify-between items-center">
-            <a href="index.html" class="flex items-center gap-2">
+            <a href="./index.html" class="flex items-center gap-2">
                 <i class="fas fa-sun text-3xl md:text-4xl text-orange-600 animate-spin-slow"></i>
                 <div>
                     <h1 class="serif text-xl md:text-2xl font-bold text-orange-600 leading-none">Your Astro Dost</h1>
@@ -99,10 +99,10 @@
             </a>
             
             <div class="hidden lg:flex space-x-8 font-medium text-gray-700 text-sm uppercase">
-                <a href="index.html" class="hover:text-orange-600 transition">Home</a>
-                <a href="about.html" class="hover:text-orange-600 transition">About Guru Ji</a>
-                <a href="services.html" class="hover:text-orange-600 transition">Services</a>
-                <a href="contact.html" class="text-orange-600 font-bold transition">Contact</a>
+                <a href="./index.html" class="hover:text-orange-600 transition">Home</a>
+                <a href="./about.html" class="hover:text-orange-600 transition">About Guru Ji</a>
+                <a href="./services.html" class="hover:text-orange-600 transition">Services</a>
+                <a href="./contact.html" class="text-orange-600 font-bold transition">Contact</a>
             </div>
             
             <a href="tel:+917905287701" class="hidden lg:block border-2 border-orange-500 text-orange-600 px-6 py-2 rounded-full font-bold hover:bg-orange-500 hover:text-white transition">
@@ -116,10 +116,10 @@
 
         <div id="mobile-menu" class="lg:hidden bg-white border-t border-gray-100 shadow-lg">
             <div class="px-4 pt-2 space-y-2">
-                <a href="index.html" class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-orange-600 hover:bg-orange-50 rounded-md">Home</a>
-                <a href="about.html" class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-orange-600 hover:bg-orange-50 rounded-md">About Guru Ji</a>
-                <a href="services.html" class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-orange-600 hover:bg-orange-50 rounded-md">Services</a>
-                <a href="contact.html" class="block px-3 py-2 text-base font-medium text-orange-600 bg-orange-50 rounded-md">Contact</a>
+                <a href="./index.html" class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-orange-600 hover:bg-orange-50 rounded-md">Home</a>
+                <a href="./about.html" class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-orange-600 hover:bg-orange-50 rounded-md">About Guru Ji</a>
+                <a href="./services.html" class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-orange-600 hover:bg-orange-50 rounded-md">Services</a>
+                <a href="./contact.html" class="block px-3 py-2 text-base font-medium text-orange-600 bg-orange-50 rounded-md">Contact</a>
                 <a href="tel:+917905287701" class="block w-full text-center mt-4 px-3 py-3 bg-orange-600 text-white rounded-md font-bold">
                     <i class="fas fa-phone-alt mr-2"></i> Call Now
                 </a>
