--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@
                     Start Your <span class="text-transparent bg-clip-text bg-gradient-to-r from-yellow-300 to-orange-400">Divine Journey</span>
                 </h1>
                 <p class="text-gray-300 text-lg max-w-2xl mx-auto leading-relaxed">
-                    Distance is not a barrier to destiny. Connect with Sriram Guruji from anywhere in the world and find the answers you seek.
+                    Distance is not a barrier to destiny. Connect with Your Astro Dost from anywhere in the world and find the answers you seek.
                 </p>
             </div>
         </div>
@@ -182,7 +182,7 @@
                     </div>
                     <h3 class="serif text-xl font-bold text-gray-800 mb-1">Visit Us</h3>
                     <p class="text-sm text-gray-500 mb-2">Bangalore, India</p>
-                    <p class="text-orange-600 font-bold text-sm">Kasturinagar, 560043</p>
+                    <p class="text-orange-600 font-bold text-sm">Ayodhya , 224123</p>
                 </div>
             </div>
         </div>
@@ -288,7 +288,7 @@
 
     <footer class="bg-[#FF5500] text-white py-4 text-center text-xs md:text-sm font-medium">
         <div class="container mx-auto px-4 lg:px-6 flex flex-col md:flex-row justify-between items-center gap-2">
-            <p>Copyright © 2026 Sriram Guruji. All Rights Reserved.</p>
+            <p>Copyright © 2026 Your Astro Dost. All Rights Reserved.</p>
             <div class="space-x-4">
                 <a href="#" class="hover:text-black">Privacy Policy</a>
                 <span>|</span>
