--- a/services.html
+++ b/services.html
@@ -73,7 +73,7 @@
                 <a href="index.html" class="hover:text-orange-600 transition">Home</a>
                 <a href="about.html" class="hover:text-orange-600 transition">About Guru Ji</a>
                 <a href="services.html" class="text-orange-600 font-bold transition">Services</a>
-                <a href="index.html#contact" class="hover:text-orange-600 transition">Contact</a>
+                <a href="./contact.html" class="hover:text-orange-600 transition">Contact</a>
             </div>
             
             <a href="tel:+917905287701" class="hidden lg:block border-2 border-orange-500 text-orange-600 px-6 py-2 rounded-full font-bold hover:bg-orange-500 hover:text-white transition">
@@ -117,7 +117,7 @@
                     </a>
                 </div>
                 <div class="md:w-1/2 flex justify-center" data-aos="zoom-in">
-                    <img src="https://cdni.iconscout.com/illustration/premium/thumb/zodiac-sign-2974919-2477352.png" alt="Zodiac Vector" class="float w-3/4 max-w-md drop-shadow-2xl">
+                    <img src="./image/hasthm.png" alt="Zodiac Vector" class="float w-3/4 max-w-md drop-shadow-2xl">
                 </div>
             </div>
         </div>
@@ -285,7 +285,7 @@
                     <h4 class="text-orange-500 font-bold uppercase tracking-widest text-sm mb-2">The Science Behind It</h4>
                     <h2 class="serif text-4xl font-bold text-gray-800 mb-6">Why Choose Vedic Solutions?</h2>
                     <p class="text-gray-600 mb-8 leading-relaxed">
-                        Vedic Astrology is not magic; it is an ancient science of stars and planetary positions that influence human life. Sriram Guruji uses mathematical calculations to predict events and suggests remedies to balance the energies.
+                        Vedic Astrology is not magic; it is an ancient science of stars and planetary positions that influence human life. Your Astro Dost uses mathematical calculations to predict events and suggests remedies to balance the energies.
                     </p>
                     
                     <div class="space-y-6">
@@ -339,7 +339,7 @@
 
     <footer class="bg-[#FF5500] text-white py-4 text-center text-xs md:text-sm font-medium">
         <div class="container mx-auto px-4 lg:px-6 flex flex-col md:flex-row justify-between items-center gap-2">
-            <p>Copyright © 2026 Sriram Guruji. All Rights Reserved.</p>
+            <p>Copyright © 2026 Your Astro Dost. All Rights Reserved.</p>
             <div class="space-x-4">
                 <a href="#" class="hover:text-black">Privacy Policy</a>
                 <span>|</span>
