--- a/contact.html
+++ b/contact.html
@@ -167,13 +167,15 @@
                     <p class="text-green-600 font-bold">Chat Now</p>
                 </a>
 
-                <a href="mailto:sriramgurujiastro@gmail.com" class="glass-card p-8 rounded-2xl text-center group cursor-pointer" data-aos="fade-up" data-aos-delay="200">
+                <a href="mailto:
+YourAstroDost@gmail.com" class="glass-card p-8 rounded-2xl text-center group cursor-pointer" data-aos="fade-up" data-aos-delay="200">
                     <div class="w-16 h-16 mx-auto bg-gradient-to-br from-blue-400 to-blue-600 rounded-full flex items-center justify-center text-white text-2xl mb-4 shadow-lg group-hover:scale-110 transition-transform">
                         <i class="fas fa-envelope"></i>
                     </div>
                     <h3 class="serif text-xl font-bold text-gray-800 mb-1">Email Us</h3>
                     <p class="text-sm text-gray-500 mb-2">Get Response in 24h</p>
-                    <p class="text-blue-600 font-bold text-sm">sriramgurujiastro@gmail.com</p>
+                    <p class="text-blue-600 font-bold text-sm">
+YourAstroDost@gmail.com</p>
                 </a>
 
                 <div class="glass-card p-8 rounded-2xl text-center group" data-aos="fade-up" data-aos-delay="300">
