--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     </div>
                     <div class="px-4 md:px-6">
                         <span class="block text-[10px] md:text-xs font-bold text-gray-400 uppercase">Call Us Today At</span>
-                        <a href="tel:+919880339009" class="block text-base md:text-xl font-bold whitespace-nowrap hover:text-orange-800 transition">+91 +917905287701</a>
+                        <a href="tel:+917905287701" class="block text-base md:text-xl font-bold whitespace-nowrap hover:text-orange-800 transition">+91 7905287701</a>
                     </div>
                 </div>
             </div>
@@ -399,7 +399,7 @@
                         <div>
                             <h3 class="serif text-lg md:text-xl font-bold text-red-700">Get Your Love Back</h3>
                             <p class="text-xs text-gray-600 mb-2">Reunite with your separated love partner.</p>
-                            <a href="tel:+919880339009" class="bg-red-600 text-white text-[10px] px-3 py-1 rounded-full font-bold inline-block">Call Us</a>
+                            <a href="tel:+917905287701" class="bg-red-600 text-white text-[10px] px-3 py-1 rounded-full font-bold inline-block">Call Us</a>
                         </div>
                     </div>
                     <div class="flex gap-4 items-start p-4 border border-orange-100 rounded-lg hover:shadow-md transition bg-white" data-aos="fade-left" data-aos-delay="100">
@@ -407,7 +407,7 @@
                         <div>
                             <h3 class="serif text-lg md:text-xl font-bold text-red-700">Spiritual Healing</h3>
                             <p class="text-xs text-gray-600 mb-2">Relax from daily stress and negatives.</p>
-                            <a href="tel:+919880339009" class="bg-red-600 text-white text-[10px] px-3 py-1 rounded-full font-bold inline-block">Call Us</a>
+                            <a href="tel:+917905287701" class="bg-red-600 text-white text-[10px] px-3 py-1 rounded-full font-bold inline-block">Call Us</a>
                         </div>
                     </div>
                      <div class="flex gap-4 items-start p-4 border border-orange-100 rounded-lg hover:shadow-md transition bg-white" data-aos="fade-left" data-aos-delay="200">
@@ -415,7 +415,7 @@
                         <div>
                             <h3 class="serif text-lg md:text-xl font-bold text-red-700">Psychic Reading</h3>
                             <p class="text-xs text-gray-600 mb-2">Know the future and make decisions.</p>
-                            <a href="tel:+919880339009" class="bg-red-600 text-white text-[10px] px-3 py-1 rounded-full font-bold inline-block">Call Us</a>
+                            <a href="tel:+917905287701" class="bg-red-600 text-white text-[10px] px-3 py-1 rounded-full font-bold inline-block">Call Us</a>
                         </div>
                     </div>
                 </div>
@@ -435,13 +435,13 @@
                     <img src="https://cdn-icons-png.flaticon.com/512/2454/2454282.png" class="w-10 md:w-12 mb-2 invert brightness-0 filter bg-white/20 rounded-full p-2">
                     <h3 class="serif text-lg md:text-xl font-bold mb-2">Solve Financial Issues</h3>
                     <p class="text-[10px] md:text-xs mb-4 px-2">Are you troubled by economic issues?</p>
-                    <a href="tel:+919880339009" class="bg-transparent border border-white rounded-full px-4 py-1 text-xs font-bold hover:bg-white hover:text-orange-500 transition"><i class="fas fa-phone-alt mr-1"></i> Call Us Now</a>
+                    <a href="tel:+917905287701" class="bg-transparent border border-white rounded-full px-4 py-1 text-xs font-bold hover:bg-white hover:text-orange-500 transition"><i class="fas fa-phone-alt mr-1"></i> Call Us Now</a>
                 </div>
                 <div class="bg-gradient-main rounded-full p-6 md:p-8 w-full max-w-[300px] aspect-square flex flex-col justify-center items-center text-white border-8 border-white shadow-2xl mx-auto hover:scale-105 transition" data-aos="zoom-in" data-aos-delay="100">
                     <img src="https://cdn-icons-png.flaticon.com/512/3209/3209965.png" class="w-10 md:w-12 mb-2 invert brightness-0 filter bg-white/20 rounded-full p-2">
                     <h3 class="serif text-lg md:text-xl font-bold mb-2">Family Problem</h3>
                     <p class="text-[10px] md:text-xs mb-4 px-2">Improve your relationship through family solutions.</p>
-                    <a href="tel:+919880339009" class="bg-transparent border border-white rounded-full px-4 py-1 text-xs font-bold hover:bg-white hover:text-orange-500 transition"><i class="fas fa-phone-alt mr-1"></i> Call Us Now</a>
+                    <a href="tel:+917905287701" class="bg-transparent border border-white rounded-full px-4 py-1 text-xs font-bold hover:bg-white hover:text-orange-500 transition"><i class="fas fa-phone-alt mr-1"></i> Call Us Now</a>
                 </div>
             </div>
         </div>
@@ -465,7 +465,7 @@
                     <div class="absolute bottom-0 p-6 text-white text-center w-full">
                         <h3 class="serif text-2xl md:text-3xl font-bold mb-2 leading-tight">GET YOUR EX<br>LOVE BACK</h3>
                         <p class="text-xs md:text-sm mb-4">WITH HELP OF Your Astro Dost</p>
-                        <a href="tel:+919880339009" class="inline-block bg-white text-red-600 rounded-full py-2 px-4 font-bold text-lg md:text-xl items-center justify-center gap-2">
+                        <a href="tel:+917905287701" class="inline-block bg-white text-red-600 rounded-full py-2 px-4 font-bold text-lg md:text-xl items-center justify-center gap-2">
                             <i class="fas fa-phone-alt"></i> Call Now
                         </a>
                     </div>
@@ -489,7 +489,7 @@
                     <div class="absolute bottom-0 p-6 text-white text-center w-full">
                         <h3 class="serif text-2xl md:text-3xl font-bold mb-2 leading-tight">PSYCHIC<br>READING SESSION</h3>
                         <p class="text-xs md:text-sm mb-4">WITH HELP OF Your Astro Dost</p>
-                        <a href="tel:+919880339009" class="inline-block bg-white text-orange-600 rounded-full py-2 px-4 font-bold text-lg md:text-xl items-center justify-center gap-2">
+                        <a href="tel:+917905287701" class="inline-block bg-white text-orange-600 rounded-full py-2 px-4 font-bold text-lg md:text-xl items-center justify-center gap-2">
                             <i class="fas fa-phone-alt"></i> Call Now
                         </a>
                     </div>
