--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
                 
                 <div class="lg:w-1/2 relative" data-aos="fade-right">
                     <div class="absolute inset-0 bg-orange-100 rounded-full blur-3xl opacity-50"></div>
-                    <img src="https://cdni.iconscout.com/illustration/premium/thumb/astrology-app-5666497-4745814.png" alt="Vedic Study" class="relative z-10 w-full max-w-md mx-auto">
+                    <img src="./image/your astro about.png" alt="Vedic Study" class="relative z-10 w-full max-w-md mx-auto">
                 </div>
 
                 <div class="lg:w-1/2" data-aos="fade-left">
