--- a/index.html
+++ b/index.html
@@ -823,9 +823,9 @@
      <!-- why choos us section end  -->
 
 
-    <section class="py-16 bg-[#FFF9F0] relative z-20">
+     <section class="py-8 md:py-16 bg-[#FFF9F0] relative z-20">
         <div class="container mx-auto px-4 lg:px-6">
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-8">
                 
                 <div class="group bg-white p-8 rounded-2xl shadow-lg border border-orange-100 hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 text-center">
                     <div class="w-16 h-16 mx-auto bg-blue-50 rounded-full flex items-center justify-center text-blue-600 text-3xl mb-6 group-hover:bg-blue-600 group-hover:text-white transition-colors duration-300">
@@ -861,6 +861,7 @@
         </div>
     </section>
 
+    
     <section class="relative w-full h-[450px] md:h-[550px] bg-gray-100">
         <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56960.96350920677!2d82.1649233695276!3d26.79216046039572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399a07937e6d2823%3A0x5fc8f6cb8b1d0b2b!2sAyodhya%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1709228471923!5m2!1sen!2sin" 
