--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                     <a href="https://wa.me/917905287701" class="mt-3 bg-[#25D366] rounded-xl p-3 flex items-center justify-center gap-3 text-white hover:bg-[#20bd5a] transition shadow-sm">
                         <i class="fab fa-whatsapp text-2xl"></i>
                         <div class="text-left">
-                            <span class="block text-[9px] opacity-90 font-bold uppercase">Chat with Sriram Ji</span>
+                            <span class="block text-[9px] opacity-90 font-bold uppercase">Chat with Your Astro Dost </span>
                             <span class="block text-sm font-extrabold">WhatsApp Now</span>
                         </div>
                     </a>
@@ -861,7 +861,7 @@
         </div>
     </section>
 
-    
+
     <section class="relative w-full h-[450px] md:h-[550px] bg-gray-100">
         <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56960.96350920677!2d82.1649233695276!3d26.79216046039572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399a07937e6d2823%3A0x5fc8f6cb8b1d0b2b!2sAyodhya%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1709228471923!5m2!1sen!2sin" 
