--- a/services.html
+++ b/services.html
@@ -148,13 +148,13 @@
                 </div>
                 <div class="flex-1">
                     <h3 class="serif text-2xl font-bold text-gray-800 mb-4 group-hover:text-orange-600 transition-colors">Whole Chart Analysis</h3>
-                    <p class="text-gray-600 leading-relaxed text-lg mb-4">
-                        A comprehensive deep-dive into your cosmic DNA. This analysis covers your **Janma Kundali (D1), Navamsa (D9), and Dashamsha (D10)** charts. We provide a 360-degree roadmap of your life, focusing on career stability, physical vitality, and long-term marital bliss. It's the essential foundation for anyone seeking to understand their core destiny and planetary influences.
+                    <p class="text-gray-600 leading-relaxed text-lg mb-6">
+                        A comprehensive deep-dive into your cosmic DNA. This analysis covers your **Janma Kundali (D1), Navamsa (D9), and Dashamsha (D10)** charts. We provide a 360-degree roadmap of your life.
                     </p>
-                    <div class="flex flex-wrap gap-3">
+                    <div class="flex flex-wrap gap-3 mb-6">
                         <span class="px-4 py-1.5 bg-orange-50 text-orange-700 text-sm font-medium rounded-full border border-orange-100">D1, D9, D10 Analysis</span>
-                        <span class="px-4 py-1.5 bg-orange-50 text-orange-700 text-sm font-medium rounded-full border border-orange-100">Career & Health</span>
                     </div>
+                    <a href="#all-services" class="inline-flex items-center gap-2 text-orange-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
                 </div>
             </div>
 
@@ -167,13 +167,10 @@
                 </div>
                 <div class="flex-1 z-10">
                     <h3 class="serif text-2xl font-bold text-yellow-400 mb-4">Premium Chart Analysis</h3>
-                    <p class="text-gray-300 leading-relaxed text-lg mb-4">
-                        The gold standard of Vedic Astrology. This advanced **Shodashvarga** (D1 to D60) analysis provides microscopic precision into your life. We decode your **Karmic inheritance**, past-life impacts, and provide exact timing for major life breakthroughs. This is for those who seek absolute clarity and are ready for life-altering insights.
+                    <p class="text-gray-300 leading-relaxed text-lg mb-6">
+                        The gold standard of Vedic Astrology. This advanced **Shodashvarga** (D1 to D60) analysis provides microscopic precision into your life and Karmic inheritance.
                     </p>
-                    <div class="flex flex-wrap gap-3">
-                        <span class="px-4 py-1.5 bg-white/10 text-yellow-300 text-sm font-medium rounded-full border border-white/20">All 16 Varga Charts</span>
-                        <span class="px-4 py-1.5 bg-white/10 text-yellow-300 text-sm font-medium rounded-full border border-white/20">Karmic Analysis</span>
-                    </div>
+                    <a href="#all-services" class="inline-flex items-center gap-2 text-yellow-400 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
                 </div>
             </div>
 
@@ -183,10 +180,10 @@
                 </div>
                 <div class="flex-1">
                     <h3 class="serif text-2xl font-bold text-gray-800 mb-4 group-hover:text-blue-600 transition-colors">Quick Consultation</h3>
-                    <p class="text-gray-600 leading-relaxed text-lg mb-4">
-                        Need answers fast? This laser-focused session is perfect for immediate dilemmas. Whether it's a critical career decision or a sudden relationship question, we provide rapid, data-backed guidance based on current **Prashna Kundali and Transit (Gochar)** movements to give you a clear "Action Plan" in minutes.
+                    <p class="text-gray-600 leading-relaxed text-lg mb-6">
+                        Need answers fast? This laser-focused session is perfect for immediate dilemmas based on current **Prashna Kundali and Transit** movements.
                     </p>
-                    <button class="text-blue-600 font-semibold flex items-center gap-2 hover:underline">Get Instant Answers <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></button>
+                    <a href="#all-services" class="inline-flex items-center gap-2 text-blue-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
                 </div>
             </div>
 
@@ -196,9 +193,10 @@
                 </div>
                 <div class="flex-1">
                     <h3 class="serif text-2xl font-bold text-gray-800 mb-4 group-hover:text-pink-600 transition-colors">Matchmaking (Kundali Milan)</h3>
-                    <p class="text-gray-600 leading-relaxed text-lg mb-4">
-                        We look beyond the basic 36 Gunas to ensure a marriage built on solid cosmic ground. Our method evaluates **Mental Harmony, Longevity, and Financial Stability** of the couple. We provide authentic remedies for Mangal and Nadi Dosha, ensuring your union is not just socially aligned, but spiritually compatible for a joyful life.
+                    <p class="text-gray-600 leading-relaxed text-lg mb-6">
+                        We look beyond the basic 36 Gunas to ensure a marriage built on solid cosmic ground, evaluating Mental Harmony and Longevity.
                     </p>
+                    <a href="#all-services" class="inline-flex items-center gap-2 text-pink-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
                 </div>
             </div>
 
@@ -208,9 +206,10 @@
                 </div>
                 <div class="flex-1">
                     <h3 class="serif text-2xl font-bold text-gray-800 mb-4 group-hover:text-emerald-600 transition-colors">Gemstones Recommendation</h3>
-                    <p class="text-gray-600 leading-relaxed text-lg mb-4">
-                        Harness the vibrational energy of the universe. We recommend gemstones based on the strength of your "Yogakaraka" planets. Our consultation includes advice on the **correct carat weight, metal, and the most auspicious 'Muhurata'** to wear your gemstone to unlock luck, health, and prosperity.
+                    <p class="text-gray-600 leading-relaxed text-lg mb-6">
+                        Harness the vibrational energy of the universe. We recommend gemstones based on the strength of your "Yogakaraka" planets.
                     </p>
+                    <a href="#all-services" class="inline-flex items-center gap-2 text-emerald-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
                 </div>
             </div>
 
@@ -220,9 +219,10 @@
                 </div>
                 <div class="flex-1">
                     <h3 class="serif text-2xl font-bold text-gray-800 mb-4 group-hover:text-purple-600 transition-colors">Tarot Reading</h3>
-                    <p class="text-gray-600 leading-relaxed text-lg mb-4">
-                        Intuitive insights for the modern soul. Tarot acts as a spiritual bridge, reflecting your current subconscious energies. Our readings help you clear mental fog, understand the intentions of others, and find a sense of direction when you feel at a spiritual or emotional crossroad.
+                    <p class="text-gray-600 leading-relaxed text-lg mb-6">
+                        Intuitive insights for the modern soul. Tarot acts as a spiritual bridge, reflecting your current subconscious energies.
                     </p>
+                    <a href="#all-services" class="inline-flex items-center gap-2 text-purple-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
                 </div>
             </div>
 
@@ -231,10 +231,11 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 11V6a2 2 0 0 0-2-2v0a2 2 0 0 0-2 2v0"/><path d="M14 10V4a2 2 0 0 0-2-2v0a2 2 0 0 0-2 2v0"/><path d="M10 10.5V6a2 2 0 0 0-2-2v0a2 2 0 0 0-2 2v0"/><path d="M18 8a2 2 0 1 1 4 0v6a8 8 0 0 1-8 8h-2c-2.8 0-4.5-.86-5.99-2.34l-3.6-3.6a2 2 0 0 1 2.83-2.82L7 15"/></svg>
                 </div>
                 <div class="flex-1">
-                    <h3 class="serif text-2xl font-bold text-gray-800 mb-4 group-hover:text-yellow-700 transition-colors">Palm Analysis (Chiromancy)</h3>
-                    <p class="text-gray-600 leading-relaxed text-lg mb-4">
-                        Your hands tell a story that your birth time might forget. We analyze the intricate lines and mounts of your palm to reveal your life path, health warnings, and future potential. This ancient science offers a powerful secondary confirmation of your astrological chart and provides guidance for those with missing birth details.
+                    <h3 class="serif text-2xl font-bold text-gray-800 mb-4 group-hover:text-yellow-700 transition-colors">Palm Analysis</h3>
+                    <p class="text-gray-600 leading-relaxed text-lg mb-6">
+                        Your hands tell a story that your birth time might forget. We analyze the lines of your palm to reveal your life path.
                     </p>
+                    <a href="#all-services" class="inline-flex items-center gap-2 text-yellow-700 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
                 </div>
             </div>
 
@@ -244,9 +245,10 @@
                 </div>
                 <div class="flex-1">
                     <h3 class="serif text-2xl font-bold text-gray-800 mb-4 group-hover:text-indigo-600 transition-colors">Face Reading</h3>
-                    <p class="text-gray-600 leading-relaxed text-lg mb-4">
-                        Decode personality and destiny through facial morphology. Our face reading service helps you understand the innate nature of business partners or life partners. By analyzing facial features, we can predict wealth patterns and future luck, helping you navigate human relationships with superior awareness.
+                    <p class="text-gray-600 leading-relaxed text-lg mb-6">
+                        Decode personality and destiny through facial morphology. Understand the innate nature of business or life partners.
                     </p>
+                    <a href="#all-services" class="inline-flex items-center gap-2 text-indigo-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
                 </div>
             </div>
 
@@ -256,14 +258,17 @@
                 </div>
                 <div class="flex-1">
                     <h3 class="serif text-2xl font-bold text-gray-800 mb-4 group-hover:text-orange-600 transition-colors">Numerology Report</h3>
-                    <p class="text-gray-600 leading-relaxed text-lg mb-4">
-                        Optimize your life's frequency. We provide deep analysis of your birth number and name vibrations. Our report includes **Name Spelling Optimization**, lucky dates, and business name suggestions to ensure you are always in sync with the numbers that bring abundance and success.
+                    <p class="text-gray-600 leading-relaxed text-lg mb-6">
+                        Optimize your life's frequency. We provide deep analysis of your birth number and name vibrations for abundance.
                     </p>
+                    <a href="#all-services" class="inline-flex items-center gap-2 text-orange-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+
 
 <!-- service section start -->
 
