--- a/services.html
+++ b/services.html
@@ -170,7 +170,7 @@
                     <p class="text-gray-300 leading-relaxed text-lg mb-6">
                         The gold standard of Vedic Astrology. This advanced **Shodashvarga** (D1 to D60) analysis provides microscopic precision into your life and Karmic inheritance.
                     </p>
-                    <a href="#all-services" class="inline-flex items-center gap-2 text-yellow-400 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
+                    <a href="#Premium" class="inline-flex items-center gap-2 text-yellow-400 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
                 </div>
             </div>
 
@@ -183,7 +183,7 @@
                     <p class="text-gray-600 leading-relaxed text-lg mb-6">
                         Need answers fast? This laser-focused session is perfect for immediate dilemmas based on current **Prashna Kundali and Transit** movements.
                     </p>
-                    <a href="#all-services" class="inline-flex items-center gap-2 text-blue-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
+                    <a href="#Quick" class="inline-flex items-center gap-2 text-blue-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
                 </div>
             </div>
 
@@ -196,7 +196,7 @@
                     <p class="text-gray-600 leading-relaxed text-lg mb-6">
                         We look beyond the basic 36 Gunas to ensure a marriage built on solid cosmic ground, evaluating Mental Harmony and Longevity.
                     </p>
-                    <a href="#all-services" class="inline-flex items-center gap-2 text-pink-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
+                    <a href="#Matchmaking" class="inline-flex items-center gap-2 text-pink-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
                 </div>
             </div>
 
@@ -222,7 +222,7 @@
                     <p class="text-gray-600 leading-relaxed text-lg mb-6">
                         Intuitive insights for the modern soul. Tarot acts as a spiritual bridge, reflecting your current subconscious energies.
                     </p>
-                    <a href="#all-services" class="inline-flex items-center gap-2 text-purple-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
+                    <a href="#Tarot" class="inline-flex items-center gap-2 text-purple-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
                 </div>
             </div>
 
@@ -235,7 +235,7 @@
                     <p class="text-gray-600 leading-relaxed text-lg mb-6">
                         Your hands tell a story that your birth time might forget. We analyze the lines of your palm to reveal your life path.
                     </p>
-                    <a href="#all-services" class="inline-flex items-center gap-2 text-yellow-700 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
+                    <a href="#Palm" class="inline-flex items-center gap-2 text-yellow-700 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
                 </div>
             </div>
 
@@ -248,7 +248,7 @@
                     <p class="text-gray-600 leading-relaxed text-lg mb-6">
                         Decode personality and destiny through facial morphology. Understand the innate nature of business or life partners.
                     </p>
-                    <a href="#all-services" class="inline-flex items-center gap-2 text-indigo-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
+                    <a href="#Face" class="inline-flex items-center gap-2 text-indigo-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
                 </div>
             </div>
 
@@ -261,7 +261,7 @@
                     <p class="text-gray-600 leading-relaxed text-lg mb-6">
                         Optimize your life's frequency. We provide deep analysis of your birth number and name vibrations for abundance.
                     </p>
-                    <a href="#all-services" class="inline-flex items-center gap-2 text-orange-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
+                    <a href="#Numerology " class="inline-flex items-center gap-2 text-orange-600 font-bold hover:gap-3 transition-all">Explore More <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg></a>
                 </div>
             </div>
         </div>
@@ -281,7 +281,7 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 
-                <div class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-orange-300 transition-all duration-300 group" data-aos="fade-up" id="s1">
+                <div  class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-orange-300 transition-all duration-300 group" data-aos="fade-up" id="s1">
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-orange-100 rounded-full flex items-center justify-center text-orange-600 text-2xl group-hover:bg-orange-600 group-hover:text-white transition">
                             <i class="fas fa-globe"></i>
@@ -301,7 +301,7 @@
 
 
 
-                <div class="bg-gradient-to-br from-gray-900 to-gray-800 rounded-2xl p-6 shadow-2xl border border-yellow-500/30 transform lg:-translate-y-4 relative overflow-hidden group" data-aos="fade-up" data-aos-delay="100">
+                <div id="Chart" class="bg-gradient-to-br from-gray-900 to-gray-800 rounded-2xl p-6 shadow-2xl border border-yellow-500/30 transform lg:-translate-y-4 relative overflow-hidden group" data-aos="fade-up" data-aos-delay="100">
                     <div class="absolute top-0 right-0 bg-yellow-400 text-black text-[10px] font-bold px-3 py-1 rounded-bl-lg uppercase">Recommended</div>
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-gradient-to-br from-yellow-400 to-orange-500 rounded-full flex items-center justify-center text-white text-2xl shadow-lg">
@@ -309,7 +309,7 @@
                         </div>
                         <span class="bg-white/10 text-yellow-400 px-3 py-1 rounded-full text-xs font-bold border border-yellow-400/30">₹1100</span>
                     </div>
-                    <h3 class="serif text-xl font-bold text-white mb-2">Premium Chart Analysis</h3>
+                    <h3 class="serif text-xl font-bold text-white mb-2"  >Premium Chart Analysis</h3>
                     <p class="text-sm text-gray-300 mb-4 leading-relaxed">
                         Deep dive into Shodashvarga (D1 to D60). This is the most detailed analysis possible in Vedic Astrology for precise predictions.
                     </p>
@@ -320,7 +320,7 @@
                     <a href="https://wa.me/917905287701?text=I%20want%20Premium%20Chart%20Analysis" class="block text-center w-full py-3 rounded-xl bg-gradient-to-r from-yellow-400 to-orange-500 text-white font-bold hover:shadow-lg transition">Get Priority Slot</a>
                 </div>
 
-                <div class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-red-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="200">
+                <div id="Get" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-red-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="200">
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-red-50 rounded-full flex items-center justify-center text-red-600 text-2xl group-hover:bg-red-600 group-hover:text-white transition">
                             <i class="fas fa-heart-broken"></i>
@@ -338,7 +338,7 @@
                     <a href="https://wa.me/917905287701?text=I%20need%20help%20with%20Love%20Problem" class="block text-center w-full py-3 rounded-xl border border-red-200 text-red-600 font-bold hover:bg-red-600 hover:text-white transition">Consult Now</a>
                 </div>
 
-                <div class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-purple-300 transition-all duration-300 group" data-aos="fade-up">
+                <div id="Tarot" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-purple-300 transition-all duration-300 group" data-aos="fade-up">
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-purple-50 rounded-full flex items-center justify-center text-purple-600 text-2xl group-hover:bg-purple-600 group-hover:text-white transition">
                             <i class="fas fa-layer-group"></i>
@@ -352,7 +352,7 @@
                     <a href="https://wa.me/917905287701?text=I%20want%20Tarot%20Reading" class="block text-center w-full py-3 rounded-xl border border-purple-200 text-purple-600 font-bold hover:bg-purple-600 hover:text-white transition">Ask a Question</a>
                 </div>
 
-                <div class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-yellow-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="100">
+                <div id="Palm" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-yellow-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="100">
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-yellow-50 rounded-full flex items-center justify-center text-yellow-600 text-2xl group-hover:bg-yellow-600 group-hover:text-white transition">
                             <i class="fas fa-hand-paper"></i>
@@ -366,7 +366,7 @@
                     <a href="https://wa.me/917905287701?text=I%20want%20Palm%20Analysis" class="block text-center w-full py-3 rounded-xl border border-yellow-200 text-yellow-600 font-bold hover:bg-yellow-600 hover:text-white transition">Send Hand Photo</a>
                 </div>
 
-                <div class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-green-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="200">
+                <div id="Face" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-green-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="200">
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-green-50 rounded-full flex items-center justify-center text-green-600 text-2xl group-hover:bg-green-600 group-hover:text-white transition">
                             <i class="fas fa-eye"></i>
@@ -380,7 +380,7 @@
                     <a href="https://wa.me/917905287701?text=I%20want%20Face%20Reading" class="block text-center w-full py-3 rounded-xl border border-green-200 text-green-600 font-bold hover:bg-green-600 hover:text-white transition">Book Reading</a>
                 </div>
 
-                <div class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-indigo-300 transition-all duration-300 group" data-aos="fade-up">
+                <div id="Numerology" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-indigo-300 transition-all duration-300 group" data-aos="fade-up">
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-indigo-50 rounded-full flex items-center justify-center text-indigo-600 text-2xl group-hover:bg-indigo-600 group-hover:text-white transition">
                             <i class="fas fa-hashtag"></i>
@@ -394,7 +394,7 @@
                     <a href="https://wa.me/917905287701?text=I%20want%20Numerology%20Report" class="block text-center w-full py-3 rounded-xl border border-indigo-200 text-indigo-600 font-bold hover:bg-indigo-600 hover:text-white transition">Get Report</a>
                 </div>
 
-                <div class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-pink-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="100">
+                <div id="Matchmaking" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-pink-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="100">
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-pink-50 rounded-full flex items-center justify-center text-pink-600 text-2xl group-hover:bg-pink-600 group-hover:text-white transition">
                             <i class="fas fa-user-friends"></i>
@@ -408,7 +408,7 @@
                     <a href="https://wa.me/917905287701?text=I%20want%20Matchmaking" class="block text-center w-full py-3 rounded-xl border border-pink-200 text-pink-600 font-bold hover:bg-pink-600 hover:text-white transition">Check Match</a>
                 </div>
 
-                <div class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-blue-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="200">
+                <div id="Quick" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-blue-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="200">
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-blue-50 rounded-full flex items-center justify-center text-blue-600 text-2xl group-hover:bg-blue-600 group-hover:text-white transition">
                             <i class="fas fa-bolt"></i>
