--- a/services.html
+++ b/services.html
@@ -301,7 +301,7 @@
 
 
 
-                <div id="Chart" class="bg-gradient-to-br from-gray-900 to-gray-800 rounded-2xl p-6 shadow-2xl border border-yellow-500/30 transform lg:-translate-y-4 relative overflow-hidden group" data-aos="fade-up" data-aos-delay="100">
+                <div id="Premium" class="bg-gradient-to-br from-gray-900 to-gray-800 rounded-2xl p-6 shadow-2xl border border-yellow-500/30 transform lg:-translate-y-4 relative overflow-hidden group" data-aos="fade-up" data-aos-delay="100">
                     <div class="absolute top-0 right-0 bg-yellow-400 text-black text-[10px] font-bold px-3 py-1 rounded-bl-lg uppercase">Recommended</div>
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-gradient-to-br from-yellow-400 to-orange-500 rounded-full flex items-center justify-center text-white text-2xl shadow-lg">
