--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 
     <div class="bg-[#FF4500] text-white py-2 text-[10px] md:text-xs font-medium tracking-wide hidden md:block">
         <div class="container mx-auto px-4 lg:px-6 flex justify-between flex-wrap gap-2">
-            <span><i class="fas fa-circle text-[6px] md:text-[8px] mr-1 md:mr-2 text-yellow-300"></i> Get Your Ex Love Back</span>
-            <span><i class="fas fa-circle text-[6px] md:text-[8px] mr-1 md:mr-2 text-yellow-300"></i> Palm Reading</span>
-            <span><i class="fas fa-circle text-[6px] md:text-[8px] mr-1 md:mr-2 text-yellow-300"></i> Face Reading</span>
-            <span><i class="fas fa-circle text-[6px] md:text-[8px] mr-1 md:mr-2 text-yellow-300"></i> Tarot Reading</span>
-            <span><i class="fas fa-circle text-[6px] md:text-[8px] mr-1 md:mr-2 text-yellow-300"></i> Numerology</span>
+           <a href="services.html#whole-chart"> <span><i class="fas fa-circle text-[6px] md:text-[8px] mr-1 md:mr-2 text-yellow-300"></i> Whole Chart Analysis</span></a> 
+        <a href="services.html#palm">   <span><i class="fas fa-circle text-[6px] md:text-[8px] mr-1 md:mr-2 text-yellow-300"></i> Palm Reading</span></a>  
+         <a href="services.html#face-reading"><span><i class="fas fa-circle text-[6px] md:text-[8px] mr-1 md:mr-2 text-yellow-300"></i> Face Reading</span></a>   
+          <a href="services.html#tarot"> <span><i class="fas fa-circle text-[6px] md:text-[8px] mr-1 md:mr-2 text-yellow-300"></i> Tarot Reading</span></a> 
+         <a href="services.html#numerology"> <span><i class="fas fa-circle text-[6px] md:text-[8px] mr-1 md:mr-2 text-yellow-300"></i> Numerology</span>    </a>  
         </div>
     </div>
 
