--- a/contact.html
+++ b/contact.html
@@ -183,8 +183,8 @@ YourAstroDost@gmail.com</p>
                         <i class="fas fa-map-marker-alt"></i>
                     </div>
                     <h3 class="serif text-xl font-bold text-gray-800 mb-1">Visit Us</h3>
-                    <p class="text-sm text-gray-500 mb-2">Bangalore, India</p>
-                    <p class="text-orange-600 font-bold text-sm">Ayodhya , 224123</p>
+                    <p class="text-sm text-gray-500 mb-2">Near Ram Janm Bhoomi</p>
+                    <p class="text-orange-600 font-bold text-sm">Ayodhya , 224123 , India</p>
                 </div>
             </div>
         </div>
