--- a/contact.html
+++ b/contact.html
@@ -243,7 +243,7 @@ YourAstroDost@gmail.com</p>
                 <div class="w-full lg:w-1/2 space-y-8" data-aos="fade-left">
                     
                     <div class="w-full h-[400px] md:h-[500px] rounded-[2rem] overflow-hidden shadow-2xl border-4 border-white map-frame relative group">
-                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.828472938634!2d77.6394!3d12.9824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae16a3501a4e17%3A0x6b47c4c50257c7c3!2sKasturi%20Nagar%2C%20Bengaluru%2C%20Karnataka%2C%20India!5e0!3m2!1sen!2sus!4v1625680000000!5m2!1sen!2sus" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3561.1204128222175!2d82.20355907!3d26.80429429!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399a0791bfffffff%3A0xc32e0ed08564aab8!2sShiv%20dayal%20jaiswal%20saraswati%20Vidya%20Mandir%20Inter%20College!5e0!3m2!1sen!2sin!4v1770110849861!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                          
                          <div class="absolute bottom-6 left-6 bg-white px-6 py-3 rounded-full shadow-lg flex items-center gap-3 opacity-90 group-hover:opacity-100 transition">
                             <i class="fas fa-map-pin text-red-500 text-xl"></i>
