--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
 
     <section class="relative w-full h-[450px] md:h-[550px] bg-gray-100">
         <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56960.96350920677!2d82.1649233695276!3d26.79216046039572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399a07937e6d2823%3A0x5fc8f6cb8b1d0b2b!2sAyodhya%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1709228471923!5m2!1sen!2sin" 
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3561.1204128222175!2d82.20355907!3d26.80429429!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399a0791bfffffff%3A0xc32e0ed08564aab8!2sShiv%20dayal%20jaiswal%20saraswati%20Vidya%20Mandir%20Inter%20College!5e0!3m2!1sen!2sin!4v1770110849861!5m2!1sen!2sin" 
             width="100%" 
             height="100%" 
             style="border:0; filter: grayscale(0%);" 
