--- a/services.html
+++ b/services.html
@@ -134,7 +134,7 @@
 
 <section class="py-24 bg-slate-50">
     <div class="container mx-auto px-4 lg:px-8">
-        <div class="text-center mb-20" data-aos="fade-up">
+        <div class="text-center mb-5 md:mb-20 " data-aos="fade-up">
             <span class="text-orange-500 font-semibold tracking-widest uppercase text-sm">Divine Guidance</span>
             <h2 class="serif text-4xl md:text-5xl font-extrabold text-gray-900 mt-3 tracking-tight">Vistar Se Jaaniye <span class="text-orange-600">Hamari Services</span></h2>
             <div class="w-24 h-1.5 bg-gradient-to-r from-orange-400 to-orange-600 mx-auto mt-6 rounded-full"></div>
